plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.1'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.olmez'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// add your other project as below when you need	
	//implementation project(':libs:existing:coreUtil')

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework:spring-core:6.0.3'
	//implementation 'org.springframework:spring-core:6.0.3'

    implementation 'commons-io:commons-io:2.11.0'
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'mysql:mysql-connector-java:8.0.31'
    implementation 'org.projectlombok:lombok:1.18.24'
	
	compileOnly 'org.projectlombok:lombok'
	
	annotationProcessor 'org.projectlombok:lombok'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
